:art: :wrench: css: Fix navbar toggle on mobile devices
Colors are hard. My navbar must use the `.navbar-light` class for the
navbar toggle to appear on smaller viewports. I don't have the colors I
really want for my navbar, but it will have to do for now.

--- a/css/style.scss
+++ b/css/style.scss
@@ -57,6 +57,8 @@ h2, h4 { color: var(--accent-color); }
 
 .dropdown-menu { background-color: var(--accent-color); }
 
+.navbar-light .navbar-nav .nav-link { color: var(--secondary); }
+
 .navbar li a {
   background-color: var(--primary);
   border-color: var(--accent-color);
